nivasa-macros/tests/trybuild/controller_duplicate_path.stderr
error: duplicate `path` entry in `#[controller]`
 --> tests/trybuild/controller_duplicate_path.rs:3:32
  |
3 | #[controller({ path: "/users", path: "/admins" })]
  |                                ^^^^
