nivasa-macros/tests/trybuild/controller_duplicate_path.rs
use nivasa_macros::controller;

#[controller({ path: "/users", path: "/admins" })]
struct UsersController;

fn main() {}
